# nebula

./: CMakeLists.txt  Cargo.toml  README.md
examples/: hello_world.neb  type_sys_examples.neb
include/frontend/: ast.hpp  parser.hpp  token.hpp  tokenizer.hpp
src/: ast.h  main.cpp  main.rs  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/frontend/: ast.cpp  ast.h  ast.rs  lexer.rs  loc.rs  located.rs  mod.rs  parse_rule.rs  parser.cpp  parser.h  parser.rs  scanner.rs  span.rs  token.cpp  token.h  token.rs  tokenizer.cpp  tokenizer.h  tokenizer.rs  types.rs
src/ir/: context.rs  expression.rs  function.rs  instruction.rs  mod.rs  types.rs
src/nir/: context.rs  expression.rs  function.rs  instruction.rs  mod.rs  transform.rs  ty.rs
src/passes/: ast2ir.rs  const_fold.rs  mod.rs  type_pass.rs
